Source/WebCore/platform/graphics/filters/software/FECompositeSoftwareApplier.cpp
@@ -140,12 +140,12 @@ bool FECompositeSoftwareApplier::applyArithmetic(FilterImage& input, FilterImage
     IntRect effectBDrawingRect = result.absoluteImageRectRelativeTo(input2);
     input2.copyPixelBuffer(*destinationPixelBuffer, effectBDrawingRect);
 
+#if !HAVE(ARM_NEON_INTRINSICS)
     auto* sourcePixelBytes = sourcePixelBuffer->bytes();
     auto* destinationPixelBytes = destinationPixelBuffer->bytes();
 
     auto length = sourcePixelBuffer->sizeInBytes();
     ASSERT(length == destinationPixelBuffer->sizeInBytes());
-#if !HAVE(ARM_NEON_INTRINSICS)
     applyPlatformArithmetic(sourcePixelBytes, destinationPixelBytes, length, m_effect.k1(), m_effect.k2(), m_effect.k3(), m_effect.k4());
 #endif
     return true;
